<resources>
    <string name="app_name">StrategieSpielApp</string>
    <string name="resource1">Baustoffe</string>
    <string name="resource2">Elektronik</string>
    <string name="resource3">Treibstoff</string>
    <string name="resources">Ressourcen</string>
    <string name="buildings">Gebäude</string>
    <string name="research">Forschung</string>
    <string name="units">Einheiten</string>
    <string name="fleets">Flotten</string>
    <string name="galaxy">Galaxie</string>
    <string name="overview">Übersicht</string>
    <string name="level">Stufe</string>
    <string name="description">Beschreibung</string>
    <string name="textview">Text</string>
    <string name="researchImage">Forschungsbild</string>
    <string name="buildingsImage">Gebäudebild</string>
    <string name="build">bauen</string>
    <string name="headline">Überschrift</string>
    <string-array name="menu">
        <item>Ressourcen</item>
        <item>Gebäude</item>
        <item>Forschung</item>
        <item>Einheiten</item>
        <item>Flotten</item>
        <item>Galaxie</item>
        <item>Ausloggen</item>
    </string-array>
    <string name="popup_menu">MENU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resourcesImage">Minenbild</string>
    <string name="login">EINLOGGEN</string>
    <string name="register">REGISTRIEREN</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="usernameHint">Benutzername</string>
    <string name="passwordHint">Passwort</string>
    <string name="emailHint">Email Adresse</string>
    <string name="ov_temperature">Temperatur:</string>
    <string name="ov_position">Position:</string>
    <string name="ov_size">Größe:</string>
    <string name="ov_points">Punkte:</string>
    <string name="ov_user">Herrscher:</string>
    <string name="planetenname">Planetenname</string>
    <string name="under_construction">Im Bau:</string>
    <string name="shipyard">Werft</string>
    <string name="incoming_fleets">Eingehende Flotten:</string>
    <string name="no_incoming_attacks">Keine eingehenden Angriffe</string>
    <string name="back">ZURÜCK</string>
    <string name="doresearch">erforschen</string>
    <string name="planetname">Planeten Name</string>
    <string name="accountname">Account Name</string>
    <string name="attack">Angreifen</string>
    <string name="planetCoords">Koordinaten:</string>
    <string name="logout">Ausloggen</string>
    <string name="amount">Anzahl</string>
    <string name="defenses">Verteidigung</string>
    <string name="UnitImage">Einheitenbild</string>
    <string name="build1">1</string>
    <string name="build10">10</string>
    <string name="build5">5</string>
    <string name="username_reg">Benutzername:</string>
    <string name="usernamePlanet">Planetenname</string>
    <string name="planetname_reg">Planetenname</string>
    <string name="planetname_reg_d">Planetenname:</string>
</resources>
