<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/listitemgalaxy"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:background="@drawable/listitemborder">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/planetname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/accountname"
        android:textSize="20sp" />

    <Button
        android:id="@+id/attack"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/attack"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/planetSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/ov_size"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/planetTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/planetSize"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/ov_temperature"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/planetCoords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/planetTemp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/planetCoords"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/resource1image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/planetCoords"
        android:layout_alignParentLeft="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp" />

    <ImageView
        android:id="@+id/resource2image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/planetCoords"
        android:layout_toRightOf="@+id/resource1"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource2"
        android:layout_toEndOf="@+id/resource1" />

    <ImageView
        android:id="@+id/resource3image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/planetCoords"
        android:layout_toRightOf="@+id/resource2"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource3"
        android:layout_toEndOf="@+id/resource2" />

    <TextView
        android:id="@+id/resource1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/planetCoords"
        android:layout_toRightOf="@+id/resource1image"
        android:layout_toEndOf="@+id/resource1image" />

    <TextView
        android:id="@+id/resource2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/planetCoords"
        android:layout_toRightOf="@+id/resource2image"
        android:layout_toEndOf="@+id/resource2image" />

    <TextView
        android:id="@+id/resource3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/planetCoords"
        android:layout_toRightOf="@+id/resource3image"
        android:layout_toEndOf="@+id/resource3image" />

</RelativeLayout>