<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/listitembuildings"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:background="@drawable/listitemborder">

    <ImageView
        android:id="@+id/buildingImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/buildingsImage" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textSize="20sp"
        android:layout_marginLeft="4dp"
        android:layout_toEndOf="@+id/buildingImage"
        android:layout_toRightOf="@+id/buildingImage"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textSize="20sp"
        android:layout_marginRight="4dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/build"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/build"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="12sp"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/buildingImage"
        android:layout_toEndOf="@+id/buildingImage"
        android:layout_below="@+id/headline"/>

    <ImageView
        android:id="@+id/resource1image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/buildingImage"
        android:layout_alignParentLeft="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource1"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/resource2image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/buildingImage"
        android:layout_toRightOf="@+id/resource1cost"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource2"
        android:layout_toEndOf="@+id/resource1cost" />

    <ImageView
        android:id="@+id/resource3image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/buildingImage"
        android:layout_toRightOf="@+id/resource2cost"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource3"
        android:layout_toEndOf="@+id/resource2cost" />

    <TextView
        android:id="@+id/resource1cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/buildingImage"
        android:layout_toRightOf="@+id/resource1image"
        android:layout_toEndOf="@+id/resource1image" />

    <TextView
        android:id="@+id/resource2cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/buildingImage"
        android:layout_toRightOf="@+id/resource2image"
        android:layout_toEndOf="@+id/resource2image" />

    <TextView
        android:id="@+id/resource3cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/buildingImage"
        android:layout_toRightOf="@+id/resource3image"
        android:layout_toEndOf="@+id/resource3image" />
</RelativeLayout>