<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/listitemunits"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:background="@drawable/listitemborder">

    <ImageView
        android:id="@+id/UnitImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/UnitImage"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/UnitImage"
        android:layout_toRightOf="@+id/UnitImage"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"
        android:layout_marginRight="4dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="4dp" />

    <Button
        android:id="@+id/build"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/build"
        android:textSize="10sp"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="12sp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="10dp"
        android:layout_toRightOf="@+id/UnitImage"
        android:layout_toEndOf="@+id/UnitImage"
        android:layout_below="@+id/name"
        android:layout_marginStart="4dp" />

    <ImageView
        android:id="@+id/resource1image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/UnitImage"
        android:layout_alignParentLeft="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp" />

    <ImageView
        android:id="@+id/resource2image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/UnitImage"
        android:layout_toRightOf="@+id/resource1cost"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource2"
        android:layout_toEndOf="@+id/resource1cost" />

    <ImageView
        android:id="@+id/resource3image"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/UnitImage"
        android:layout_toRightOf="@+id/resource2cost"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/resource3"
        android:layout_toEndOf="@+id/resource2cost" />

    <TextView
        android:id="@+id/resource1cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/UnitImage"
        android:layout_toRightOf="@+id/resource1image"
        android:layout_toEndOf="@+id/resource1image" />

    <TextView
        android:id="@+id/resource2cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/UnitImage"
        android:layout_toRightOf="@+id/resource2image"
        android:layout_toEndOf="@+id/resource2image" />

    <TextView
        android:id="@+id/resource3cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:layout_below="@+id/UnitImage"
        android:layout_toRightOf="@+id/resource3image"
        android:layout_toEndOf="@+id/resource3image" />

    <EditText
        android:id="@+id/amountToBuild"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_toStartOf="@+id/build"
        android:layout_alignBottom="@+id/build"
        android:textSize="10sp"
        android:ems="4"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:hint="@string/amount"/>
</RelativeLayout>