<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PopupMenuFragment">

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="showPopup"
        android:text="@string/popup_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fuelImage"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/resource3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/computerchipsImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oil696579_1920"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/computerchipsImage"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/resource2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/processor2217771_1920"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/materialImage"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/resource1"
        app:layout_constraintEnd_toStartOf="@+id/computerchipsImage"
        app:layout_constraintStart_toEndOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brick1980_1920"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/materialImage"
        app:layout_constraintStart_toStartOf="@+id/materialImage"
        app:layout_constraintTop_toBottomOf="@+id/materialImage" />

    <TextView
        android:id="@+id/computerchips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/computerchipsImage"
        app:layout_constraintStart_toStartOf="@+id/computerchipsImage"
        app:layout_constraintTop_toBottomOf="@+id/computerchipsImage" />

    <TextView
        android:id="@+id/fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/fuelImage"
        app:layout_constraintStart_toStartOf="@+id/fuelImage"
        app:layout_constraintTop_toBottomOf="@+id/fuelImage" />

</androidx.constraintlayout.widget.ConstraintLayout>